--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
       <div class="nav-right">
         <a class="nav-link" href="/home" id="nav-home" data-i18n="nav.home">Home</a>
         <a class="nav-link" href="/dashboard" id="nav-dashboard" data-i18n="nav.dashboard" style="display:none;">Dashboard</a>
+        <a class="nav-link" href="/accounts" id="nav-accounts" data-i18n="nav.accounts" style="display:none;">Accounts</a>
         <a class="nav-link" href="/analytics" id="nav-analytics" data-i18n="nav.analytics" style="display:none;">Analytics</a>
         <a class="nav-link" href="/recurring" id="nav-recurring" data-i18n="nav.recurring" style="display:none;">Recurring</a>
         <a class="nav-link" href="/profile" id="nav-profile" data-i18n="nav.profile" style="display:none;">Profile</a>
